Fixed layout issues

--- a/mainLayout.css
+++ b/mainLayout.css
@@ -147,17 +147,7 @@ body {
 }
 
 /* END OF INGREDIENT TABS */
-
-.recipeResults {
-  height: auto;
-  border: 10px solid #ffffff;
-  display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 40px;
-}
-
-.savedRecipesResults {
+#recipeResults {
   height: auto;
   border: 10px solid #ffffff;
   display: grid;
@@ -171,7 +161,7 @@ body {
   background-size: cover;
   border: 2px solid #5136c9;
   padding: 20px;
-  width: 530px;
+  width: 600px;
   height: 250px;
 
   text-align: right;
@@ -202,8 +192,4 @@ body {
   line-height: 5px;
   position: relative;
   left: 510px;
-}
-
-.more-info-recipe {
-  margin-top: 5%;
 }
